unix-io: Use POSIX 2008's O_CLOEXEC instead of a separate fcntl(), fixing a race condition. Don't force fsync() when closing a file. Closes: #193.

--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ BUILDSYS_SHARED_LIB
 
 dnl Headers and functions
 dnl =====================
-AC_CHECK_FUNCS([fcntl fsync mkdtemp])
+AC_CHECK_FUNCS([mkdtemp])
 
 dnl gettext
 dnl =======
