--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 # Please don't update this file manually - use ./update-potfiles.sh instead!
 src/aac/libmp4.c
+src/adplug/adplug-xmms.cc
 src/adplug/plugin.c
 src/alarm/alarm.c
 src/alarm/interface.c
@@ -11,8 +12,8 @@ src/amidi-plug/backend-alsa/b-alsa.c
 src/amidi-plug/backend-fluidsynth/b-fluidsynth.c
 src/amidi-plug/i_configure-alsa.c
 src/amidi-plug/i_configure-ap.c
-src/amidi-plug/i_configure-fluidsynth.c
 src/amidi-plug/i_configure.c
+src/amidi-plug/i_configure-fluidsynth.c
 src/amidi-plug/i_fileinfo.c
 src/amidi-plug/i_utils.c
 src/aosd/aosd.c
@@ -24,13 +25,15 @@ src/audpl/audpl.c
 src/blur_scope/blur_scope.c
 src/bs2b/plugin.c
 src/cairo-spectrum/cairo-spectrum.c
-src/cd-menu-items/cd-menu-items.c
 src/cdaudio-ng/cdaudio-ng.c
+src/cd-menu-items/cd-menu-items.c
 src/compressor/plugin.c
+src/console/abstract_file.cxx
 src/console/Ay_Apu.cxx
 src/console/Ay_Emu.cxx
 src/console/Blip_Buffer.cxx
 src/console/Classic_Emu.cxx
+src/console/configure.c
 src/console/Data_Reader.cxx
 src/console/Dual_Resampler.cxx
 src/console/Fir_Resampler.cxx
@@ -45,17 +48,15 @@ src/console/M3u_Playlist.cxx
 src/console/Multi_Buffer.cxx
 src/console/Music_Emu.cxx
 src/console/Nes_Apu.cxx
-src/console/Nsf_Emu.cxx
 src/console/Nsfe_Emu.cxx
+src/console/Nsf_Emu.cxx
+src/console/plugin.c
 src/console/Sap_Emu.cxx
 src/console/Spc_Cpu.cxx
 src/console/Spc_Dsp.cxx
 src/console/Spc_Emu.cxx
 src/console/Vgm_Emu.cxx
 src/console/Ym2612_Emu.cxx
-src/console/abstract_file.cxx
-src/console/configure.c
-src/console/plugin.c
 src/crossfade/crossfade.c
 src/crystalizer/crystalizer.c
 src/cue/cue.c
@@ -64,6 +65,7 @@ src/ffaudio/ffaudio-core.c
 src/filewriter/filewriter.c
 src/filewriter/mp3.c
 src/filewriter/vorbis.c
+src/flacng/metadata.c
 src/flacng/plugin.c
 src/gio/gio.c
 src/gnomeshortcuts/gnomeshortcuts.c
@@ -84,6 +86,7 @@ src/m3u/m3u.c
 src/metronom/metronom.c
 src/mixer/mixer.c
 src/mms/mms.c
+src/modplug/modplugbmp.cxx
 src/modplug/plugin_main.c
 src/mpg123/mpg123.c
 src/mpris2/plugin.c
