psf: Use standard types and GLib byte macros.

--- a/src/psf/Makefile
+++ b/src/psf/Makefile
@@ -18,5 +18,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS} -O0
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. -Ispu/ -I.
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../.. -Ispu/ -I.
 LIBS += -lz
