amidi-plug: Use Audacious config system. Many cleanups.

--- a/src/amidi-plug/Makefile
+++ b/src/amidi-plug/Makefile
@@ -1,7 +1,6 @@
 PLUGIN = amidi-plug${PLUGIN_SUFFIX}
 
 SRCS = amidi-plug.c		\
-       i_vfslayer.c		\
        i_midi.c			\
        i_backend.c		\
        i_configure.c		\
@@ -11,7 +10,7 @@ SRCS = amidi-plug.c		\
        i_utils.c		\
        i_fileinfo.c
 
-SUBDIRS = pcfg ${AMIDIPLUG_BACKENDS}
+SUBDIRS = ${AMIDIPLUG_BACKENDS}
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -21,4 +20,4 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${PANGO_CFLAGS} ${GMODULE_CFLAGS} \
 	-DAMIDIPLUGBACKENDDIR=\"${plugindir}/${AMIDIPLUG_BACKEND_DIR}\" -I../..
-LIBS += ${GTK_LIBS} ${PANGO_LIBS} ${GMODULE_LIBS} ./pcfg/libpcfg.a ${GLIB_LIBS}
+LIBS += ${GTK_LIBS} ${PANGO_LIBS} ${GMODULE_LIBS} ${GLIB_LIBS}
