scrobbler2: Link with -lrt (needed for CLOCK_GETTIME in older glibc).

--- a/src/scrobbler2/Makefile
+++ b/src/scrobbler2/Makefile
@@ -4,7 +4,7 @@ SRCS = scrobbler.c \
 	   scrobbler_communication.c \
 	   scrobbler_xml_parsing.c \
 	   config_window.c
-			
+
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -15,4 +15,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS} -Wall
 CPPFLAGS += ${PLUGIN_CPPFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS} ${CURL_CFLAGS} ${XML_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${CURL_LIBS} ${XML_LIBS}
+LIBS += -lrt ${GTK_LIBS} ${GLIB_LIBS} ${CURL_LIBS} ${XML_LIBS}
