Fix blank "Install Path:" line in configure output.

--- a/configure.ac
+++ b/configure.ac
@@ -1116,7 +1116,7 @@ dnl =============
 echo
 echo "Configuration:"
 echo
-echo "  Install path:                           ${audacious_plugin_root}"
+echo "  Install path:                           $plugindir"
 echo
 echo "  Output Plugins"
 echo "  --------------"
