Remove use of PKG_CHECK_VAR introduced in 4b0861ae.  Closes: #271.

--- a/configure.ac
+++ b/configure.ac
@@ -1067,7 +1067,7 @@ fi
 
 dnl *** End of all plugin checks ***
 
-PKG_CHECK_VAR([plugindir], [audacious], [plugin_dir], [], [AC_MSG_ERROR([Cannot retrieve plugin_dir pkgconfig variable])])
+plugindir=`pkg-config audacious --variable=plugin_dir`
 AC_SUBST(plugindir)
 
 dnl XXX
