--- a/src/sid/Makefile
+++ b/src/sid/Makefile
@@ -7,7 +7,6 @@ SRCS = xs_init.c	\
        xs_md5.c \
        xs_stil.c	\
        xs_filter.c	\
-       xs_sidplay1.cc	\
        xs_sidplay2.cc	\
        xs_slsup.c	\
        xs_player.c	\
@@ -21,5 +20,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CXXFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -D_REENTRANT -I../.. ${SIDPLAY1_CFLAGS} ${SIDPLAY2_CFLAGS} ${BUILDERS_CFLAGS} ${GLIB_CFLAGS}
-LIBS += -lm ${BUILDERS_LDFLAGS} ${SIDPLAY1_LIBS} ${SIDPLAY2_LIBS} ${BUILDERS_LIBS} ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -D_REENTRANT -I../.. ${SIDPLAY2_CFLAGS} ${BUILDERS_CFLAGS} ${GLIB_CFLAGS}
+LIBS += -lm ${BUILDERS_LDFLAGS} ${SIDPLAY2_LIBS} ${BUILDERS_LIBS} ${GLIB_LIBS}
