--- a/configure.ac
+++ b/configure.ac
@@ -1163,9 +1163,7 @@ echo "  sndfile extensions:                     $have_sndfile"
 echo "  Tone Generator:                         yes"
 echo "  Ogg Vorbis (vorbis):                    $have_vorbis"
 echo "  Free Lossless Audio Codec (flacng):     $have_flacng"
-echo "  Commodore 64 audio (SID):               $have_sidplay $xs_have_sidplay2_api"
-echo "    -> libSIDPlay2 support:               $xs_have_sidplay2"
-echo "    -> distortion patched libSIDPlay2:    $xs_have_distortion"
+echo "  Commodore 64 audio (SID):               $have_sidplay"
 echo "  Game music (spc, nsf & gbs):            $have_console"
 echo "  PlayStation (psf/psf2) audio:           $enable_psf"
 echo "  Nintendo DS audio (xsf):                $enable_xsf"
