--- a/extra.mk.in
+++ b/extra.mk.in
@@ -29,9 +29,6 @@ BINIO_CFLAGS ?= @BINIO_CFLAGS@
 BINIO_LIBS ?= @BINIO_LIBS@
 BS2B_CFLAGS ?= @BS2B_CFLAGS@
 BS2B_LIBS ?= @BS2B_LIBS@
-BUILDERS_CFLAGS ?= @BUILDERS_CFLAGS@
-BUILDERS_LDFLAGS ?= @BUILDERS_LDFLAGS@
-BUILDERS_LIBS ?= @BUILDERS_LIBS@
 CAIRO_CFLAGS ?= @CAIRO_CFLAGS@
 CAIRO_LIBS ?= @CAIRO_LIBS@
 CDIO_LIBS ?= @CDIO_LIBS@
@@ -87,8 +84,8 @@ SAMPLERATE_CFLAGS ?= @SAMPLERATE_CFLAGS@
 SAMPLERATE_LIBS ?= @SAMPLERATE_LIBS@
 SDL_CFLAGS ?= @SDL_CFLAGS@
 SDL_LIBS ?= @SDL_LIBS@
-SIDPLAY2_CFLAGS ?= @SIDPLAY2_CFLAGS@
-SIDPLAY2_LIBS ?= @SIDPLAY2_LIBS@
+SIDPLAYFP_CFLAGS ?= @SIDPLAYFP_CFLAGS@
+SIDPLAYFP_LIBS ?= @SIDPLAYFP_LIBS@
 SNDFILE_CFLAGS ?= @SNDFILE_CFLAGS@
 SNDFILE_LIBS ?= @SNDFILE_LIBS@
 SNDIO_LIBS ?= @SNDIO_LIBS@
