BUILDERS_LIBS is no longer defined.

--- a/src/sid/Makefile
+++ b/src/sid/Makefile
@@ -18,4 +18,4 @@ LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CXXFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -DDATADIR="\"$(datadir)/\"" -I../.. ${SIDPLAYFP_CFLAGS} ${GLIB_CFLAGS}
-LIBS += -lm ${SIDPLAYFP_LIBS} ${BUILDERS_LIBS} ${GLIB_LIBS}
+LIBS += -lm ${SIDPLAYFP_LIBS} ${GLIB_LIBS}
