Use AC_CONFIG_MACRO_DIR.  This allows using autoreconf instead of our own autogen.sh.  Closes: #282.

--- a/configure.ac
+++ b/configure.ac
@@ -16,6 +16,7 @@ AC_DEFINE_UNQUOTED([VERSION], "$VERSION", [Version number of package])
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 
 AUD_COMMON_PROGS
 
