asx: Use new ini-file parser. Relicense under BSD since this code is all mine and nenolod's.

--- a/src/asx/Makefile
+++ b/src/asx/Makefile
@@ -1,5 +1,5 @@
 PLUGIN = asx${PLUGIN_SUFFIX}
-SRCS = asx.c util.c
+SRCS = asx.c
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -7,5 +7,4 @@ include ../../extra.mk
 plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
