--- a/configure.ac
+++ b/configure.ac
@@ -55,7 +55,7 @@ OUTPUT_PLUGINS=""
 EFFECT_PLUGINS="compressor crossfade crystalizer ladspa mixer stereo_plugin voice_removal echo_plugin"
 GENERAL_PLUGINS="alarm albumart search-tool"
 VISUALIZATION_PLUGINS="blur_scope cairo-spectrum"
-CONTAINER_PLUGINS="audpl m3u pls asx"
+CONTAINER_PLUGINS="audpl m3u pls"
 TRANSPORT_PLUGINS="unix-io"
 
 dnl Check for GIO
@@ -865,13 +865,13 @@ PKG_CHECK_MODULES([XML], [libxml-2.0])
 CONTAINER_PLUGINS="$CONTAINER_PLUGINS xspf"
 
 
-dnl ASXv3
+dnl ASX
 dnl -----
 
 PKG_CHECK_MODULES([XML], [libxml-2.0])
 
-have_asxv3=yes
-CONTAINER_PLUGINS="$CONTAINER_PLUGINS asxv3"
+have_asx=yes
+CONTAINER_PLUGINS="$CONTAINER_PLUGINS asx"
 
 
 dnl CUE
@@ -1245,8 +1245,7 @@ echo
 echo "  Container"
 echo "  ---------"
 echo "  Audacious playlist format (audpl):      yes"
-echo "  Advanced Stream Redirecting v1/2(asx):  yes"
-echo "  Advanced Stream Redirecting v3(asxv3):  $have_asxv3"
+echo "  Advanced Stream Redirecting (asx):      $have_asx"
 echo "  Winamp PLS playlist format (pls):       yes"
 echo "  M3U playlist format (m3u):              yes"
 echo "  XML Sharable Playlist Format (xspf):    yes"
