--- a/src/asx/Makefile
+++ b/src/asx/Makefile
@@ -1,5 +1,5 @@
 PLUGIN = asx${PLUGIN_SUFFIX}
-SRCS = asx.c util.c
+SRCS = asx.c util.c asxv3.c
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -7,5 +7,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${XML_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} ${XML_LIBS}
