amidi-plug: Remove module-loading code.  FluidSynth backend is hardcoded now.

--- a/src/amidi-plug/Makefile
+++ b/src/amidi-plug/Makefile
@@ -1,6 +1,7 @@
 PLUGIN = amidi-plug${PLUGIN_SUFFIX}
 
 SRCS = amidi-plug.c		\
+       backend-fluidsynth/b-fluidsynth.c \
        i_midi.c			\
        i_backend.c		\
        i_configure.c		\
@@ -9,16 +10,13 @@ SRCS = amidi-plug.c		\
        i_utils.c		\
        i_fileinfo.c
 
-SUBDIRS = backend-fluidsynth
-
 include ../../buildsys.mk
 include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GMODULE_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GMODULE_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${FLUIDSYNTH_CFLAGS} -I../..
+LIBS += ${GTK_LIBS} ${FLUIDSYNTH_LIBS}
 
-CPPFLAGS += -DAMIDIPLUGBACKENDDIR=\"${plugindir}/amidi-plug\" \
-            -DAMIDIPLUG_FLUIDSYNTH
+CPPFLAGS += -DAMIDIPLUG_FLUIDSYNTH
