--- a/src/amidi-plug/Makefile
+++ b/src/amidi-plug/Makefile
@@ -17,6 +17,6 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${FLUIDSYNTH_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${FLUIDSYNTH_LIBS}
+LIBS += ${GTK_LIBS} ${FLUIDSYNTH_LIBS} -lm
 
 CPPFLAGS += -DAMIDIPLUG_FLUIDSYNTH
