Separate raw and MP4-encapsulated AAC plugins.  The decoding functions are entirely separate, and distinguishing between the two formats can be done better in core.

--- a/configure.ac
+++ b/configure.ac
@@ -446,7 +446,7 @@ if test "x$enable_aac" != "xno"; then
                     [have_aac=yes
                      AC_SUBST(FAAD_CFLAGS)
                      AC_SUBST(FAAD_LIBS)
-                     INPUT_PLUGINS="$INPUT_PLUGINS aac"])],
+                     INPUT_PLUGINS="$INPUT_PLUGINS aac aac-raw"])],
                 [], [#include <neaacdec.h>])],
             [], [#include <neaacdec.h>])]
     )
