--- a/configure.ac
+++ b/configure.ac
@@ -13,10 +13,12 @@ AC_SUBST([VERSION], [AC_PACKAGE_VERSION])
 AC_DEFINE_UNQUOTED([PACKAGE], "$PACKAGE", [Name of package])
 AC_DEFINE_UNQUOTED([VERSION], "$VERSION", [Version number of package])
 
-AC_CANONICAL_HOST
-AC_CANONICAL_TARGET
+AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
+
+AC_CANONICAL_HOST
+AC_CANONICAL_TARGET
 
 AUD_COMMON_PROGS
 
