--- a/extra.mk.in
+++ b/extra.mk.in
@@ -44,6 +44,7 @@ GDKX11_CFLAGS ?= @GDKX11_CFLAGS@
 GDKX11_LIBS ?= @GDKX11_LIBS@
 GIO_CFLAGS ?= @GIO_CFLAGS@
 GIO_LIBS ?= @GIO_LIBS@
+GL_LIBS ?= @GL_LIBS@
 GLIB_CFLAGS ?= @GLIB_CFLAGS@
 GLIB_LIBS ?= @GLIB_LIBS@
 GMODULE_CFLAGS ?= @GMODULE_CFLAGS@
