--- a/src/gl-spectrum/Makefile
+++ b/src/gl-spectrum/Makefile
@@ -9,4 +9,4 @@ plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. ${GTK_CFLAGS}
-LIBS += -lm ${GTK_LIBS} -lGL
+LIBS += -lm ${GTK_LIBS} ${GL_LIBS}
