Add a plugin (disabled by default) to delete files from the filesystem.  Closes: #76.

--- a/configure.ac
+++ b/configure.ac
@@ -54,7 +54,7 @@ dnl ======================
 INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS=""
 EFFECT_PLUGINS="compressor crossfade crystalizer ladspa mixer stereo_plugin voice_removal echo_plugin"
-GENERAL_PLUGINS="alarm albumart search-tool"
+GENERAL_PLUGINS="alarm albumart delete-files search-tool"
 VISUALIZATION_PLUGINS="blur_scope cairo-spectrum"
 CONTAINER_PLUGINS="asx asx3 audpl m3u pls xspf"
 TRANSPORT_PLUGINS="unix-io gio"
@@ -1076,6 +1076,7 @@ echo "  General"
 echo "  -------"
 echo "  Alarm:                                  yes"
 echo "  Album Art:                              yes"
+echo "  Delete from Filesystem:                 yes"
 echo "  Linux Infrared Remote Control (LIRC)    $have_lirc"
 echo "  MPRIS 2 Server:                         $have_mpris2"
 echo "  Search Tool:                            yes"
