Use g_ascii_* functions rather than locale-dependent ones.

--- a/src/asx/Makefile
+++ b/src/asx/Makefile
@@ -7,4 +7,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS}
