--- a/src/flacng/Makefile
+++ b/src/flacng/Makefile
@@ -11,5 +11,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${LIBFLAC_CFLAGS} -I../..
-LIBS += ${LIBFLAC_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${LIBFLAC_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} ${LIBFLAC_LIBS}
