--- a/src/psf/Makefile
+++ b/src/psf/Makefile
@@ -19,4 +19,4 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS} -O0
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../.. -Ispu/ -I.
-LIBS += -lz
+LIBS += -lz ${GLIB_LIBS}
