--- a/src/xsf/Makefile
+++ b/src/xsf/Makefile
@@ -13,4 +13,4 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS} -O0
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../.. -Ispu/
-LIBS += -lm -lz
+LIBS += -lm -lz ${GLIB_LIBS}
