--- a/src/resample/Makefile
+++ b/src/resample/Makefile
@@ -8,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
-LIBS += -lsamplerate
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} -lsamplerate
