--- a/src/sndfile/Makefile
+++ b/src/sndfile/Makefile
@@ -9,5 +9,5 @@ include ../../buildsys.mk
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${SNDFILE_CFLAGS} -I../..
-LIBS += ${SNDFILE_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${SNDFILE_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} ${SNDFILE_LIBS} -lm
