--- a/src/sdlout/Makefile
+++ b/src/sdlout/Makefile
@@ -9,5 +9,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CPPFLAGS += -I../.. ${SDL_CFLAGS}
-CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += -lm ${SDL_LIBS}
+CFLAGS += ${GLIB_CFLAGS} ${PLUGIN_CFLAGS}
+LIBS += -lm ${GLIB_LIBS} ${SDL_LIBS}
