--- a/src/speed-pitch/Makefile
+++ b/src/speed-pitch/Makefile
@@ -7,6 +7,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += -lm -lsamplerate
+LIBS += -lm ${GLIB_LIBS} -lsamplerate
