Preserve timestamps when installing (saves pointless recompiling).

--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -73,7 +73,7 @@ OBJC_DEPENDS = @OBJC_DEPENDS@
 OBJCXX_DEPENDS = @OBJCXX_DEPENDS@
 LN_S = @LN_S@
 MKDIR_P = mkdir -p
-INSTALL = @INSTALL@
+INSTALL = @INSTALL@ -p
 SHELL = @SHELL@
 MSGFMT = @MSGFMT@
 JAVAC = @JAVAC@
